[package]
name = "hit-or-miss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "partition"
path = "src/partition.rs"


[dependencies]
bytes = "1"
bincode = "1.2.1"
tokio = { version = "1", features = ["full"] }
lru = "0.10.0"
clap = { version = "4.1.11", features = ["derive"] }
