[package]
name = "hitormiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "partition"
path = "src/bin/partition.rs"

[[bin]]
name = "master"
path = "src/bin/master.rs"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
lru = "0.10.0"
hash_ring = "0.2.0"
