[package]
name = "hitormiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "partition"
path = "src/bin/partition.rs"

[[bin]]
name = "master"
path = "src/bin/master.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
lru = "0.10.0"
hash_ring = "0.2.0"
chrono = "0.4.24"
uuid = {version = "1.3.1", features = ["v4" ,"fast-rng"] }
